--- a/01_NavBar/templates/flexbox.html
+++ b/01_NavBar/templates/flexbox.html
@@ -11,7 +11,15 @@
 
 
 {% block body %}
-	<div class="imageContainer">
 
+	<div class="imageContainer">
+		<div class="rightContainer">
+			<img src="/static/img/Mushroom.jpg" alt="Mushroom" width="300" height="200" style="padding: 10px">
+			<img src="/static/img/Sun.jpg" width="300" height="200" style="padding: 10px">
+		</div>
+		<div class="leftContainer">
+			<img src="/static/img/Susuki.jpg" width="300" height="200" style="padding: 10px">
+			<img src="/static/img/Sand.jpg" width="300" height="200" style="padding: 10px">
+		</div>
 	</div>
 {% endblock %}
