--- a/01_NavBar/templates/toggle.html
+++ b/01_NavBar/templates/toggle.html
@@ -5,7 +5,7 @@
 
 {% block style %}
 	.navbar a.toggle:link, a.toggle:visited {background-color: grey}
-	body {background-color: rgb(30 40 110)}
+	body {background-color: rgb(30 40 110);}
 
 
 
