--- a/01_NavBar/templates/toggle.html
+++ b/01_NavBar/templates/toggle.html
@@ -3,9 +3,12 @@
 {% block title %}Toggle{% endblock %}
 
 
+
+
+
 {% block style %}
 	.navbar a.toggle:link, a.toggle:visited {background-color: grey}
-	body {background-color: rgb(30 40 110);}
+	body {background-color: black;}
 
 
 
@@ -13,6 +16,7 @@
 
 
 {% block body %}
+
 
 
 {% endblock %}
