--- a/01_NavBar/static/css/forest.css
+++ b/01_NavBar/static/css/forest.css
@@ -1,11 +1,5 @@
 /* CSS StyleSheet */
-html, body {height: 100%; background-color: white; margin: 0px; font-family: impact, serif;}
-
-/*	Different Styleshees for different media
-<link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
-<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
-*/
-
+body {background-color: white; margin: 0px; font-family: helvetica;}
 
 
 
@@ -16,24 +10,15 @@ html, body {height: 100%; background-color: white; margin: 0px; font-family: imp
 
 
 
+/*	Different Styleshees for different media
+<link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
+<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
+*/
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Flexbox Menu*/
+/* Flexbox */
 .image {
 	background-image: url(/static/img/Susuki.jpg);
 	background-repeat: no-repeat;
@@ -42,6 +27,7 @@ html, body {height: 100%; background-color: white; margin: 0px; font-family: imp
 	background-size: cover;
 	height: 100%;
 }
+
 .image .container {
 	display: flex;
 	box-sizing: border-box;
@@ -50,8 +36,11 @@ html, body {height: 100%; background-color: white; margin: 0px; font-family: imp
 	align-items: center;
 	justify-content: space-between;
 	padding: 20px;
+
 }
+
 .image .container .item {
+	position: sticky;
 	color: white;
 	font-size: 1.2em;
 	letter-spacing: 1px;
@@ -62,49 +51,32 @@ html, body {height: 100%; background-color: white; margin: 0px; font-family: imp
 	text-align: center;
 	border-radius: 0px 10px;
 }
+
 .image .container .item:hover {
 	background-color: rgba(220, 220, 220, 0.3);
 }
+
 a {text-decoration: none;}
 
 
 
-/* Navbar Links Styling */
+/* Links Styling */
 .navbar {
-	background-color: darkgrey;
+	background-color: red;
 	overflow: hidden;
 	width: 100%;
 	height: 42px;
+	color: white;
 	font-size: 1.3em;
 	margin-bottom: 20px;
 	position: sticky;
 }
-
-a {
+.navbar a {
 	float: left;
 	color: white;
 	text-decoration: none;
 	padding: 10px 20px;
 }
-
-a:visited {
-	background-color: red;
-}
-
-a:hover, a:active {
+.navbar a:hover, a:active {
 	background-color: lightgrey;
-}
-
-.navbartoggle {
-	background-color: green;
-	overflow: hidden;
-	width: 100%;
-	height: 42px;
-	font-size: 1.3em;
-	margin-bottom: 20px;
-	position: sticky;
-}
-
-.navbartoggle a:hover, .navber a:active {
-	background-color: olive;
 }
