--- a/01_NavBar/templates/base.html
+++ b/01_NavBar/templates/base.html
@@ -4,21 +4,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %}{% endblock %}</title>
-	<link href="{{ url_for('static',filename='css/stylesheet.css') }}" type="text/css" rel="stylesheet">
-	<script src="{{ url_for('static',filename='javasheet.js') }}"></script>
-
-
+	{% block head %}{% endblock %}
+	<link id="pagestyle" rel="stylesheet" type="text/css" href="/static/css/stylesheet.css">
+	<script type="text/javascript" src="{{ url_for('static',filename='js/javasheet.js') }}"></script>
 
 
 	<style>{% block style %}{% endblock %}</style>
 </head>
 <body>
-	<div class="navbar">
+	<div class="navbar" id="navbarid">
 		<a class="home" href="/home">Home</a>
 		<a class="flexbox" href="/flexbox">FlexBox</a>
 		<a class="toggle" href="/toggle">Toggle</a>
 		<a class="#3" href="#3">Link 3</a>
 	</div>
+	<button onclick="toggleForest()">Forest</button>
+	<button onclick="defaultstyle()">Default</button>
 
 	{% block body %}{% endblock %}
 
