--- a/01_NavBar/templates/flexbox.html
+++ b/01_NavBar/templates/flexbox.html
@@ -11,11 +11,14 @@
 
 
 {% block body %}
+
+
 	<div class="image">
 		<div class="container" style="position: sticky">
 			<a href="/home"><div class="item">left</div></a>
 			<a href="/home"><div class="item">center</div></a>
 			<a href="/home"><div class="item">right</div></a>
 		</div>
+		<h2 class="maintext">This is a flexbox menu!</h2>
 	</div>
 {% endblock %}
