--- a/01_NavBar/templates/home.html
+++ b/01_NavBar/templates/home.html
@@ -16,9 +16,9 @@ body {
 {% endblock %}
 
 {% block body %}
-<div>
-	<h1 style="margin: 100px 50px;">
+
+	<h1 class="maintext">
 		Welcome!<br>This local website is where I practice all my CSS, HTML, and JavaScript.
 	</h1>
-</div>
+
 {% endblock %}
