--- a/01_NavBar/templates/toggle.html
+++ b/01_NavBar/templates/toggle.html
@@ -7,7 +7,7 @@
 
 
 {% block style %}
-	.navbar a.toggle:link, a.toggle:visited {background-color: grey}
+	.navbar a.toggle:link, a.flexbox:visited {background-color: grey}
 	body {background-color: black;}
 
 
@@ -17,6 +17,17 @@
 
 {% block body %}
 
+
+
+	<div class="the">
+		<button id="default" class="default">Default</button>		
+		<button id="forest" class="forest">Forest</button>
+		<button id="sunset" class="sunset">Sunset</button>
+	</div>
+
+	<h2 class="maintext">Toggle the buttons to change the theme of the page!</h2>
+
+	<script src="/static/js/javasheet.js"></script>
 
 
 {% endblock %}
