Grid Photo Layout

--- a/01_WebDesign/templates/base.html
+++ b/01_WebDesign/templates/base.html
@@ -11,12 +11,14 @@
 </head>
 <body>
 	<div class="navbar" id="navbarid">
-		<a class="home" href="/home">Home</a>
+		<a class="home" href="/">Home</a>
 		<a class="flexbox" href="/flexbox">FlexBox</a>
 		<a class="toggle" href="/toggle">Toggle</a>
+		<a class="grid" href="/grid">Grid</a>
 		<a class="#3" href="#3">Link 3</a>
 	</div>
 	
+
 
 	{% block body %}{% endblock %}
 
