--- a/01_WebDesign/templates/flexbox.html
+++ b/01_WebDesign/templates/flexbox.html
@@ -6,6 +6,7 @@
 {% block style %}
 	.navbar a.flexbox:link, a.flexbox:visited {background-color: grey}
 	.navbar {margin-bottom: 0px}
+	body {color: white}
 
 {% endblock %}
 
@@ -14,10 +15,10 @@
 
 
 	<div class="image">
-		<div class="container" style="position: sticky">
-			<a href="/home"><div class="item">left</div></a>
-			<a href="/home"><div class="item">center</div></a>
-			<a href="/home"><div class="item">right</div></a>
+		<div class="container">
+			<a href="/"><div class="item">left</div></a>
+			<a href="/"><div class="item">center</div></a>
+			<a href="/"><div class="item">right</div></a>
 		</div>
 		<h2 class="maintext">This is a flexbox menu!</h2>
 	</div>
