--- a/01_WebDesign/templates/toggle.html
+++ b/01_WebDesign/templates/toggle.html
@@ -8,7 +8,7 @@
 
 {% block style %}
 	.navbar a.toggle:link, a.flexbox:visited {background-color: grey}
-	body {background-color: black;}
+	body {background-color: black; color: white;}
 
 
 
@@ -17,7 +17,7 @@
 
 {% block body %}
 
-
+	<h2 class="maintext">Toggle the buttons to change the theme of the page!</h2>
 
 	<div class="the">
 		<button id="default" class="default">Default</button>		
@@ -25,7 +25,7 @@
 		<button id="sunset" class="sunset">Sunset</button>
 	</div>
 
-	<h2 class="maintext">Toggle the buttons to change the theme of the page!</h2>
+
 
 	<script src="/static/js/javasheet.js"></script>
 
