--- a/01_WebDesign/static/css/stylesheet.css
+++ b/01_WebDesign/static/css/stylesheet.css
@@ -1,12 +1,101 @@
 /* CSS StyleSheet */
 html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
-.maintext {margin: 100px 50px; color: white; font-size: 2em;}
+.maintext {margin: 50px 50px 30px; font-size: 2em;}
 
 /*	Different Styleshees for different media
 <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
 <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
 */
 
+/* Grid Styling */
+
+
+.gridcontainer {
+	display: grid;
+	box-sizing: border-box;
+	background: black;
+	margin: 0 7vw 7vw;
+	min-width: 800px;
+
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(6, minmax(200px, auto));
+	grid-gap: 20px;
+}
+
+.griditem {
+	display:flex ;
+	position: relative;
+	overflow: hidden;
+}
+
+.griditem1 {
+	grid-column: 1 / 3;
+	grid-row: span 2;
+}
+.griditem2 {
+	grid-column: span 2;
+	grid-row: span 3;
+}
+.griditem3 {
+	grid-row: span 4;
+}
+.griditem4 {
+	grid-row: span 2;
+}
+.griditem5 {
+	grid-column: span 2;
+}
+.griditem6 {
+	grid-column: span 3;
+	grid-row: span 2;
+}
+
+.imagestyle {
+	min-width: 100%;
+	object-fit: cover;
+	object-position: center;
+}
+
+.imageoverlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(100, 100, 100, 0.5);
+	opacity: 0;
+}
+
+.griditem-text {
+	position: absolute;
+	margin: 0;
+	padding: 30px;
+	font: 5rem impact;
+	color: rgba(240, 240, 240, 0.9);
+}
+.text1 {
+	top: 0;
+	right: 0;
+}
+.text2 {
+	bottom: 0;
+	left: 0;
+}
+.text5 {
+	top: 0;
+	left: 0;
+}
+
+
+
+.imageoverlay:hover {
+	transition: 0.5s;
+	opacity: 1;
+}
+a.griditem:link, a.griditem:visited {
+	margin: 0;
+	padding: 0;
+}
 
 
 
@@ -22,15 +111,6 @@ html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
 --sunset-font: rgba(50, 10, 30, 1);
 }
 
-
-
-
-
-
-
-
-
-
 /* Flexbox Menu*/
 .image {
 	background-image: url(/static/img/Susuki.jpg);
@@ -38,7 +118,7 @@ html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
 	background-position: center;
 	-moz-background-size: cover;
 	background-size: cover;
-	height: 100%;
+	height: 96%;
 }
 .image .container {
 	display: flex;
@@ -52,11 +132,11 @@ html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
 
 .image .container .item {
 	color: white;
-	font-size: 1.2em;
-	letter-spacing: 1px;
+	font-size: 2rem;
+	letter-spacing: 2px;
 	box-sizing: border-box;
 	border: 2px solid white;
-	width: 150px;
+	width: 20vw;
 	padding: 10px;
 	text-align: center;
 	border-radius: 0px 10px;
@@ -73,24 +153,26 @@ a {text-decoration: none;}
 	background-color: rgba(120, 120, 120, 0.6);
 	overflow: hidden;
 	width: 100%;
-	height: 42px;
+	height: 4%;
 	font-size: 1.3em;
 	margin-bottom: 20px;
-	position: sticky;
+	position: relative;
 }
 
-a {
+.navbar a {
 	float: left;
 	color: white;
 	text-decoration: none;
 	padding: 10px 20px;
+	height: 100%;
 }
 
-a:hover, a:active {
+.navbar a:hover, .navbar a:active {
 	background-color: rgba(150, 150, 150, 0.5);
 }
 
 
+/* Toggle Theme Classes */
 .forestTheme {
 	background-color: var(--forest-main);
 	color: var(--forest-font);
