--- a/01_WebDesign/templates/base.html
+++ b/01_WebDesign/templates/base.html
@@ -15,6 +15,7 @@
 		<a class="flexbox" href="/flexbox">FlexBox</a>
 		<a class="toggle" href="/toggle">Toggle</a>
 		<a class="grid" href="/grid">Grid</a>
+		<a class="hover" href="/hover">Hover</a>
 		<a class="#3" href="#3">Link 3</a>
 	</div>
 	
