--- a/01_WebDesign/static/css/stylesheet.css
+++ b/01_WebDesign/static/css/stylesheet.css
@@ -7,8 +7,121 @@ html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
 <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
 */
 
-/* Grid Styling */
 
+/* Different hover styles */
+
+.hoverGrid {
+	display: grid;
+	position: relative;
+	margin: 0 7.5vw 7.5vw;
+
+	grid-template-columns: repeat(3, 25vw);
+	grid-auto-rows: 25vw;
+	grid-gap: 5vw;
+}
+
+.hoverGridItem {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	border: 0.6vw solid orange;
+	font: 3vw impact;
+	opacity: 1;
+	margin: 0;
+	padding: 0;
+}
+
+.hE {
+	display: flex;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
+	text-shadow: center;
+}
+
+.hoverEffect1:hover {
+	border: 2vw solid white;
+	transition: 1s;
+}
+.hoverEffect2:hover {
+	background: orange;
+	transition: 1s;
+}
+.hoverEffect3:hover {
+	color: orange;
+	font: 5vw impact;
+	transition: 1s;
+}
+.hoverEffect4:hover {
+	transform: rotate(90deg) translate(-3vw, 2vw);
+	transition: 1s;	
+}
+.hoverEffect5 {
+	position: relative;
+}
+.hE5 {
+	opacity: 1;
+}
+.hoverEffect5-Under {
+	background: orange;
+}
+.hoverEffect5-Above {
+	background: black;
+}
+.hoverEffect5-Above:hover {
+	opacity: 0;
+	transition: 1s;
+}
+.hoverEffect6 {
+	position: relative;
+}
+.hoverEffect6-Under {
+	background: black;
+	opacity: 1;
+}
+.hoverEffect6-Above {
+	background: orange;
+	opacity: 0;
+}
+.hoverEffect6-Above:hover {
+	opacity: 1;
+	transition: 1s;	
+}
+
+.hoverEffect7 {
+	position: relative;
+}
+.hoverImage7 {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+	opacity: 1;
+}
+.hoverImage7Cover {
+	background: black;
+	opacity: 1;
+}
+.hoverImage7Cover:hover {
+	opacity: 0;
+	transition: 1s;
+}
+.hoverEffect8:hover {
+	border-radius: 50%;
+	transition: 1s;	
+}
+.hoverEffect9:hover {
+	opacity: 0;
+	transition: 1s;
+}
+
+
+
+/* Grid Styling */
 
 .gridcontainer {
 	display: grid;
@@ -21,13 +134,11 @@ html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
 	grid-template-rows: repeat(6, minmax(200px, auto));
 	grid-gap: 20px;
 }
-
 .griditem {
 	display:flex ;
 	position: relative;
 	overflow: hidden;
 }
-
 .griditem1 {
 	grid-column: 1 / 3;
 	grid-row: span 2;
@@ -49,13 +160,11 @@ html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
 	grid-column: span 3;
 	grid-row: span 2;
 }
-
 .imagestyle {
 	min-width: 100%;
 	object-fit: cover;
 	object-position: center;
 }
-
 .imageoverlay {
 	position: absolute;
 	top: 0;
@@ -65,7 +174,6 @@ html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
 	background: rgba(100, 100, 100, 0.5);
 	opacity: 0;
 }
-
 .griditem-text {
 	position: absolute;
 	margin: 0;
@@ -85,9 +193,6 @@ html, body {height: 100%; margin: 0px; font-family: georgia, serif;}
 	top: 0;
 	left: 0;
 }
-
-
-
 .imageoverlay:hover {
 	transition: 0.5s;
 	opacity: 1;
@@ -111,6 +216,7 @@ a.griditem:link, a.griditem:visited {
 --sunset-font: rgba(50, 10, 30, 1);
 }
 
+
 /* Flexbox Menu*/
 .image {
 	background-image: url(/static/img/Susuki.jpg);
@@ -129,7 +235,6 @@ a.griditem:link, a.griditem:visited {
 	justify-content: space-between;
 	padding: 20px;
 }
-
 .image .container .item {
 	color: white;
 	font-size: 2rem;
@@ -172,8 +277,10 @@ a {text-decoration: none;}
 }
 
 
+
 /* Toggle Theme Classes */
 .forestTheme {
+
 	background-color: var(--forest-main);
 	color: var(--forest-font);
 }
