--- a/01_WebDesign/templates/base.html
+++ b/01_WebDesign/templates/base.html
@@ -16,6 +16,7 @@
 		<a class="toggle" href="/toggle">Toggle</a>
 		<a class="grid" href="/grid">Grid</a>
 		<a class="hover" href="/hover">Hover</a>
+		<a class="drtoggle" href="/drytoggle">DRY Toggle</a>
 		<a class="#3" href="#3">Link 3</a>
 	</div>
 	
