--- a/01_WebDesign/templates/toggle.html
+++ b/01_WebDesign/templates/toggle.html
@@ -16,15 +16,25 @@
 
 
 {% block body %}
-
-	<h2 class="maintext">Toggle the buttons to change the theme of the page!</h2>
-
-	<div class="the">
-		<button id="default" class="default">Default</button>		
-		<button id="forest" class="forest">Forest</button>
-		<button id="sunset" class="sunset">Sunset</button>
+	
+	<div class="topToggle">
+		<h2 class="maintext">Toggle the buttons to change the theme of the page!</h2>
+		<div>
+			<button id="default" class="default">Default</button>		
+			<button id="forest" class="forest">Forest</button>
+			<button id="sunset" class="sunset">Sunset</button>
+		</div>
 	</div>
 
+	<div class="midToggle">
+		<h2 class="maintext">Here we will try another technique for toggling.</h2>
+		
+		<div class="mediaToggle">
+			<div class="toggleBox">Box 1</div>
+			<div class="toggleBox">Box 2</div>
+			<div class="toggleBox">Box 3</div>
+		</div>
+	</div>
 
 
 	<script src="/static/js/javasheet.js"></script>
