--- a/02_PhotoGallery/templates/base.html
+++ b/02_PhotoGallery/templates/base.html
@@ -18,12 +18,11 @@
 	<section class="navbarGridContainer">
 		<a id="home" href="/">Home</a>
 		<a id="photography" href="/photography/">Photography</a>
-		<a id="photoshop" href="#/photoshop/">PhotoShop</a>
-		<a id="illustration" href="#/illustration/">Illustration</a>
-		<a id="interior" href="#/interior/">Interior</a>
-		<a id="fashion" href="#/fashion/">Fashion</a>
-		<a id="blog" href="#/blog/">Blog</a>
-		<a id="contact" href="#/Contact/">Contact</a>
+		<a id="photoshop" href="#/graphicdesign/" style="color: grey;">Graphic Design</a>
+		<a id="interior" href="/interior/">Interior</a>
+		<a id="fashion" href="/fashion/">Fashion</a>
+		<a id="blog" href="#/blog/" style="color: grey;">Blog</a>
+		<a id="contact" href="#/Contact/" style="color: grey;">Contact</a>
 	
 
 	</section>
@@ -34,6 +33,6 @@
 		<h1>Furusato Design</h1>
 		<h3>furusato.design@gmailcom</h3>
 	</footer>
-
+	<script src="/static/js/javasheet.js"></script>
 </body>
 </html>
