--- a/02_PhotoGallery/templates/home.html
+++ b/02_PhotoGallery/templates/home.html
@@ -19,53 +19,36 @@ a#home {
 		</section>
 	</div>
 
-
-	<div id="imgGridContainer">
-		<section id="stickyButtonBox">	
-			<button id="grid2" class="gridColumnsButton">TWO</button>
-			<button id="grid3" class="gridColumnsButton">THREE</button>
-			<button id="grid4" class="gridColumnsButton">FOUR</button>
-			<button id="grid5" class="gridColumnsButton">FIVE</button>
-			<button id="grid6" class="gridColumnsButton">SIX</button>
-			<button id="grid10" class="gridColumnsButton">Thumbnail</button>
-
-
-			<button id="searchAll" class="gridButton" style="background: green; color: white;">ALL</button>
-			<button id="searchTree" class="gridButton" style="background: green; color: white;">TREE</button>
-			<button id="searchSnow" class="gridButton" style="background: green; color: white;">SNOW</button>
-			<button id="searchSun" class="gridButton" style="background: green; color: white;">SUN</button>
-		</section>
-		<img src="/static/img/photography/snowhill2.jpg" alt="snow hill sun" class="imgGridItem landscape">		
-		<img src="/static/img/photography/river.jpg" alt="snow river sun" class="imgGridItem landscape">		
-		<img src="/static/img/photography/treesky2.jpg" alt="tree sky" class="imgGridItem landscape">		
-		<img src="/static/img/photography/treebark1.jpg" alt="snow sun sunset" class="imgGridItem landscape">		
-		<img src="/static/img/photography/treesky3.jpg" alt="tree sky" class="imgGridItem landscape">		
-		<img src="/static/img/photography/snowhill.jpg" alt="snow hill" class="imgGridItem landscape">		
-		<img src="/static/img/photography/hillsun.jpg" alt="hill sun" class="imgGridItem landscape">		
-		<img src="/static/img/photography/ice.jpg" alt="ice sun" class="imgGridItem landscape">		
-		<img src="/static/img/photography/treebark2.jpg" alt="tree bark" class="imgGridItem landscape">		
-		<img src="/static/img/photography/ice2.jpg" alt="ice" class="imgGridItem landscape">		
-		<img src="/static/img/photography/treebark3.jpg" alt="tree bark" class="imgGridItem landscape">		
-		<img src="/static/img/photography/treesnow.jpg" alt="tree snow" class="imgGridItem landscape">
-
-	</div>
-
-	<section id="modalView" class="modalView">
-
-		<div id="modalBackground" class="center">
-			<div id="modalContent" class="center">
-				<div id="modalLeftArrowBox" class="modalArrowBox center">
-					<div id="modalLeftArrow"></div>
-				</div>
-				<img id="modalImg" class="modalImg" src="" alt="">
-				<div id="modalRightArrowBox" class="modalArrowBox center">
-					<div id="modalRightArrow"></div>
-				</div>
-			</div>
+	<section class="homeSection" style="margin-top: 100px;">
+		<div class="homeText">
+			Photography
 		</div>
-		<div id="closeModalButton" class="center">
-			<div id="closeButtonCross1" class="closeButtonCross"></div>
-			<div id="closeButtonCross2" class="closeButtonCross"></div>
+		<div class="homeGridContainer">
+			<div class="homeGridItem"></div>
+			<div class="homeGridItem"></div>
+			<div class="homeGridItem"></div>
+		</div>
+	</section>
+
+	<section class="homeSection">
+		<div class="homeText">
+			Interior
+		</div>
+		<div class="homeGridContainer">
+			<div class="homeGridItem"></div>
+			<div class="homeGridItem"></div>
+			<div class="homeGridItem"></div>
+		</div>
+	</section>
+
+	<section class="homeSection">
+		<div class="homeText">
+			Fashion
+		</div>
+		<div class="homeGridContainer">
+			<div class="homeGridItem"></div>
+			<div class="homeGridItem"></div>
+			<div class="homeGridItem"></div>
 		</div>
 	</section>
 
